# minecraft-diagnostic-mcp

./: .env.example  .gitignore  AGENTS.md  ALERTING.md  CHANGELOG.md  CONTRACT.md  DEPLOYMENT.md  DEVELOPMENT.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SUPPORT.md  TODO.md  pyproject.toml  rcon.py
.github/workflows/: tests.yml
src/minecraft_diagnostic_mcp/: __init__.py  __main__.py  server.py  settings.py
src/minecraft_diagnostic_mcp/analyzers/: __init__.py  config_linter.py  log_analyzer.py
src/minecraft_diagnostic_mcp/collectors/: __init__.py  docker_collector.py  filesystem_collector.py  rcon_collector.py
src/minecraft_diagnostic_mcp/models/: __init__.py  config.py  context.py  diagnostics.py  findings.py  plugin.py  snapshot.py
src/minecraft_diagnostic_mcp/parsers/: __init__.py  log_parser.py  plugin_manifest_parser.py  properties_parser.py  yaml_parser.py
src/minecraft_diagnostic_mcp/services/: __init__.py  alert_service.py  config_lint_service.py  log_analysis_service.py  log_forensics_service.py  plugin_service.py  snapshot_service.py
src/minecraft_diagnostic_mcp/tools/: __init__.py  admin_tools.py  diagnostic_tools.py
tests/: test_alert_service.py  test_backup_workflow_integration.py  test_config_linter.py  test_context_helpers.py  test_entrypoint.py  test_filesystem_collector.py  test_log_analysis_service.py  test_log_analyzer.py  test_log_forensics_service.py  test_log_parser.py  test_package_contract.py  test_plugin_manifest_parser.py  test_plugin_service.py  test_properties_parser.py  test_runtime_readiness.py  test_runtime_tool_flows.py  test_settings.py  test_snapshot_service.py  test_tool_contract_outputs.py  test_yaml_parser.py
