[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minecraft-diagnostic-mcp"
version = "1.0.0"
description = "Model Context Protocol server for Minecraft diagnostics across backup, local runtime, and Docker runtime environments."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "minecraft", "diagnostics", "paper", "purpur", "spigot"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "mcp[cli]>=1.2.1",
  "PyYAML>=6.0.2",
]

[project.urls]
Homepage = "https://github.com/Monasik/minecraft-diagnostic-mcp"
Repository = "https://github.com/Monasik/minecraft-diagnostic-mcp"
Issues = "https://github.com/Monasik/minecraft-diagnostic-mcp/issues"

[project.scripts]
minecraft-diagnostic-mcp = "minecraft_diagnostic_mcp.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
